--- a/RealEstateProject/index.html
+++ b/RealEstateProject/index.html
@@ -216,7 +216,7 @@
           </section>
           <!-- SEction 2 ends here -->
           <!-- Section 3 starts here -->
-          <section class="sec-3">
+          <!-- <section class="sec-3">
             <img src="images/wave.svg" alt="" class="w-100 waves">
             <div class="sec-one-main">
               <h2 class="crd-tit-two">Caretaking - Project Management</h2>
@@ -228,7 +228,7 @@
             </div>
           </div>
             </div>
-        </section>
+        </section> -->
         <br>
         
         
