--- a/RealEstateProject/index.html
+++ b/RealEstateProject/index.html
@@ -17,15 +17,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- CSS -->
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsiveIndex.css">
 </head>
 <body>
     <header>
-        <nav>
-          <ul class="nav justify-content-center align-items-center">
-            
-                <li class="nav-item">
-                  <img src="logo.jpg" class="logo-img" alt="" width="140">
-                </li>
+        <nav class="navbar  navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <img src="logo.jpg" class="logo-img" alt="" width="140">
+            <button class="navbar-toggler float-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+             <ul class="nav justify-content-center align-items-center">
                 <li class="nav-item">
                   <a class="nav-link text-body-secondary" aria-current="page" href="#">Home</a>
                 </li>
@@ -52,7 +55,8 @@
                 </li>
 
                 <button type="button" class="sub-prop">Submit Property</button>
-              </ul>
+              </ul></div>
+          </div>
         </nav>
     </header>
 
@@ -87,7 +91,7 @@
 
         <h2 class="crd-tit-one">Residential Projects</h2>
 <!-- ----------Section one ends here -->
-<!----------Section two starts here--> -->
+<!----------Section two starts here--> 
         <section class="sec-2">
 
           <div class="row row-cols-1 row-cols-md-3 g-4">
