--- a/RealEstateProject/index.html
+++ b/RealEstateProject/index.html
@@ -243,10 +243,7 @@
               our set up is situated in Pune, Maharashtra, India. A Property Manager overseeing Commercial Real Estate
               might be in charge of diverse areas, like Landscaping and Building Maintenance. Residential Property
               Caretakers can have numerous tasks, such as collecting rent, enforcing community living standards, and
-              addressing tenant complaints, Property Tax, Agreements, Police Verification, Inspection of properties etc.
-              If you are facing such types of problem regarding your properties, call to United Realtors. We are having
-              properties all around city of Pune and PCMC area and our system is become successful. [A well Organized
-              Reliable Caretaking Firm (Property Management Firm)].</p>
+              addressing tenant complaints, Property Tax, Agreements, Police Verification, Inspection of properties etc.</p>
             <button class="ready">Read More</button>
           </div>
         </div>
@@ -267,9 +264,7 @@
               might be in charge of diverse areas, like Landscaping and Building Maintenance. Residential Property
               Caretakers can have numerous tasks, such as collecting rent, enforcing community living standards, and
               addressing tenant complaints, Property Tax, Agreements, Police Verification, Inspection of properties etc.
-              If you are facing such types of problem regarding your properties, call to United Realtors. We are having
-              properties all around city of Pune and PCMC area and our system is become successful. [A well Organized
-              Reliable Caretaking Firm (Property Management Firm)].</p>
+              </p>
             <button class="ready">Read More</button>
           </div>
           <div class="imgright"></div>
