--- a/RealEstateProject/index.html
+++ b/RealEstateProject/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" id="Navbar">
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: rgb(227,190,115);">
     <div class="container-fluid">
       <a class="navbar-brand" style="box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 10px -10px;" href="#">
         <img src="logo.jpg" class="logo-img" alt="" width="140">
